language are seperated (turkish-english)

--- a/views/components/hgroup.ejs
+++ b/views/components/hgroup.ejs
@@ -2,17 +2,35 @@
     <% if (name=="hero" ) { %>
         <h1 class="large-title d-flex align-items-center mb-0">Hi, I'm Volkan <img class="ms-2"
                 src="/public/images/sunglasses.svg" alt=""></h1>
-        <h2 class="sub-text"><span>I make everything</span> like a boss.</h2>
+        <h2 class="sub-text"><b>I make everything</b> like a boss.</h2>
 
         <% } %>
-            <% if (name=="about" ) { %>
-                <h1 class="large-title d-flex align-items-center mb-0">About<img src="/public/images/lips.png" alt="">
-                </h1>
-                <h2 class="sub-text"><span>Wanna see</span> the moon?</h2>
+            <% if (name=="hero_tr" ) { %>
+                <h1 class="large-title d-flex align-items-center mb-0">Selam, Ben Volkan <img class="ms-2"
+                        src="/public/images/sunglasses.svg" alt=""></h1>
+                <h2 class="sub-text"><b>Ben her şeyi</b> bir uzman gibi yaparım.</h2>
+
                 <% } %>
-                    <% if(name=="contact" ) { %>
-                        <h1 class="large-title d-flex align-items-center mb-0">Contact<img class="ms-2"
-                                src="/public/images/retro-contact.svg" alt=""></h1>
-                        <h2 class="sub-text"><span>Just tell me..</span> What you want...</h2>
+                    <% if (name=="about" ) { %>
+                        <h1 class="large-title d-flex align-items-center mb-0">About<img src="/public/images/lips.png"
+                                alt="">
+                        </h1>
+                        <h2 class="sub-text"><b>Wanna see</b> the moon?</h2>
                         <% } %>
+                            <% if (name=="about_tr" ) { %>
+                                <h1 class="large-title d-flex align-items-center mb-0">Hakkında<img
+                                        src="/public/images/lips.png" alt="">
+                                </h1>
+                                <h2 class="sub-text"><b>Ay'ı görmek,</b> ister misin?</h2>
+                                <% } %>
+                                    <% if(name=="contact" ) { %>
+                                        <h1 class="large-title d-flex align-items-center mb-0">Contact<img class="ms-2"
+                                                src="/public/images/retro-contact.svg" alt=""></h1>
+                                        <h2 class="sub-text"><b>Just tell me..</b> What you want...</h2>
+                                        <% } %>
+                                            <% if(name=="contact_tr" ) { %>
+                                                <h1 class="large-title d-flex align-items-center mb-0">İletişim<img
+                                                        class="ms-2" src="/public/images/retro-contact.svg" alt=""></h1>
+                                                <h2 class="sub-text"><b>Sadece ne istediğini..</b> Söyle bana...</h2>
+                                                <% } %>
 </div>
