--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -417,10 +417,9 @@
                                         by my side, away from evil. And suddenly I'm lost in the depths of space. I
                                         wander among
                                         the
-                                        stars and colorful dust clouds. I perish peacefully. All begins with
-                                        love...<br><br>Take
+                                        stars and colorful dust clouds. I perish peacefully.<br><br>Take
                                         a
-                                        journey with me. Imagine what you will see.</p>
+                                        journey with me and imagine what you will see.</p>
                                 </div>
                             </div>
                     </div>
@@ -436,7 +435,7 @@
                     <div class="hgroup">
                         <%- include("components/hgroup.ejs", name="contact" ) %>
                     </div>
-                    <form name="contact" action="/" method="post">
+                    <form name="contact" action="/">
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-floating mb-3">
@@ -486,7 +485,7 @@
                                 <span class="messageStatus d-none">You just made a huge mistake. Sent it...</span>
                             </div>
                             <div class="col-12">
-                                <button id="send" class="btn">Just Send it B*tch</button>
+                                <button id="send" class="btn"><span class="middle-finger-icon">🖕</span>Just Send it B*tch</button>
                             </div>
                         </div>
                     </form>
