--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -3,9 +3,9 @@
 
 <script src="/public/scripts/jquery/jquery-3.6.0.js"></script>
 <script src="/public/scripts/tilt.js/tilt.min.js"></script>
-<script defer src="/public/scripts/loadingScreen.js/loadingScreen.js"></script>
+<script src="/public/scripts/loadingScreen.js/loadingScreen.js"></script>
 <script src="/node_modules/toastr/build/toastr.min.js"></script>
-<script defer src="/public/scripts/custom/index.js"></script>
+<script src="/public/scripts/custom/index.js"></script>
 </body>
 
 </html>
